input/demux + misc/image: fix mime-type matching

These changes make sure that we query the source-stream's mime-type in
src/input/demux.c and src/misc/image.c, and not the full content-type.

The previous implementation would fail to identify the relevant
demuxer, and image chroma, if the stream's content-type contained
parameters following the mime-type.

fixes: #18144

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>